kube/env/kafka-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kafka
  ports:
    - port: 9092
      targetPort: 9092
      name: "9092"
    - port: 29092
      targetPort: 29092
      name: "29092"
