kube/env/rabbit-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbit
  ports:
    - port: 5672
      targetPort: 5672
