kube/env/ingress-service.yml
apiVersion: networking.k8s.io/v1
#apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /p(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip-service
                port:
                  number: 5001
            #  serviceName: posts-cluster-ip-service
            #  servicePort: 5001
          - path: /f(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: finder-cluster-ip-service
                port:
                  number: 5002
            #  serviceName: finder-cluster-ip-service
            #  servicePort: 5002
          - path: /a(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 5005
            #  serviceName: finder-cluster-ip-service
            #  servicePort: 5002
